add day 15 and ajust styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>100 Days Of Code Log of Greg Ogun</title>
-    <link rel="stylesheet" href="css-reset.css">
+    <!-- <link rel="stylesheet" href="css-reset.css"> -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
@@ -40,13 +40,13 @@
     <div class="introduction">
         <img class="giphy" src="https://media.giphy.com/media/14bWswbeWGzYEo/giphy.gif" alt="gif of man going on an adventure">
 
-        <p>Greetings, friends! (Or as my first programmer-baby words were: "Hello World!" If you're reading this, chances are you're a fellow developer or maybe a hiring manager (please please please be a hiring manager) and you might be so curious to find out whether my taking on this challenge will result in my rising to glory or a painful, long-winded descent into madness. Well, perhaps you could stick around and find out. 
+        <p>Greetings, friends! (Or as my first programmer-baby words were: "Hello, World!" If you're reading this, chances are you're a fellow developer or maybe a hiring manager (please please please be a hiring manager) and you might be so curious to find out whether my taking on this challenge will result in my rising to coding-glory or a painful, long-winded descent into madness. Well, perhaps you could stick around and find out. 
         <br>
         <br>
         Shall we get into it?
         <br>
         <br>
-        <span class="bold-text">Disclaimer:</span> You might notice that before  <span class="bold-text">Day 15</span> things might look a bit, well, boring. (<span class="bold-text">Day 15</span> is when I had a small epiphany and decided to start keeping a better log of my 100 days.) So, if you want to get to the more wholesome content, do feel free to <a href="#day25">skip ahead</a>, or watch me struggle along till my <span class="bold-text">Day 15</span> epiphany. 
+        <span class="bold-text">Disclaimer:</span> You might notice that before  <span class="bold-text">Day 15</span> things might look a bit, well, boring. (<span class="bold-text">Day 15</span> is when I had a small epiphany and decided to start keeping a better log of my 100 days.) So, if you want to get to the more wholesome content, do feel free to <a href="#day15">skip ahead</a>, or watch me struggle along till my <span class="bold-text">Day 15</span> epiphany. 
         
 
 
@@ -182,12 +182,20 @@
         </div>
 
         <div id="day15" class="day">
-            <h2>Day 15: Day Month 01, 2018</h2>
+            <h2>Day 15: 29th June, 2020</h2>
             <img src="#" alt="">
-            <p>**Today’s Progress**: Write progress here.</p>
-            <p>**Thoughts:** Write additional thoughts here.</p>
-            <p>**Link to tweet:** [yourName Day 1](insertLinkToTweet)</p>
-            <p>**Link to work:** [nameOfWork](insertLinkHere)</p>
+            <p>Today’s Progress</p>
+            <ul>
+                <li>Got back into #100DaysOfCode after some much-needed days off.</li>
+                <li>Went back to JS basics and started reading Jon Duckett's 'JavaScript & jQuery' book.</li>
+                <li>Signed up to Codeacademy! </li>
+            </ul>
+            <p>Thoughts: Wasn't easy making the decision to kinda go back to basics with JavaScript but I know it will be worth it's weight in gold in the long run (so I hope).</p>
+            <img class="taller-img" src="https://lh3.googleusercontent.com/mSYz1PvAJ4yJ_OFzo5YPdqS2bR-4HZIwrEXmTrmptSqVAT1oeHEAbyjJtyKw_ws6bqXxchQ44BLtQKEIhmo97wXkGfZpUACCFziBQObYPszth6iPGmb2LPer6lWxhsKPV0OpZTkReZ3xiciY24AY1YzM4mcIMslq1UloHwFW1GIJqt5RxcrgmRZ3CZ3ONogD_9EqaFFC70sUUFv-tXpKrccIJ2_74uL7U3nBqopJ_6rBNDZVqnF5IBgIvXcfPDtg6Z12hqJhfnBmFpg7XhQb_yeQ1tIB-PZPerqzMhAYIK2jU-BpvF3GoaxMv7BoBV2WAh8xr2-o5HUyd8Z3CaAqCYOtjlad2gScM2nJ6D2sgMFUC-804PLBx2Oudb1DNZY1mTBTZtdK13yionC2jDYoiu5YsX1iMGhn5ut38Ff_HSwRqWkhJSprHUXYDMvGBc2UNi9c1Bfmmdbn4nVt6Mr_ioi3AzSAtIVH5rmvVZ9s3vlBBs2mBW46yLDUrQsQo19mKd21Xu9vYnK59zZ-TrGjWxvRmPRn_23lJmWi6KgH_1Of5pURndmuKP4kNoaNFdhNTMo7QB4AsjSIabZ-WHO43bT4SVvfyoJh3dzrPFbATdMH-VzpJEQp1lrzsJ-EmEKh2YlB7iUhRyV4Me0afpR1vzrMCAS0XtlNJ_KAmmzCk_2M_XjwPaKI_TnMO7Q=w601-h758-no?authuser=2" alt="'JavaScrip & jQuery' by Jon Duckett">
+            <img class="square-img" src=https://lh3.googleusercontent.com/9OGWHILxx1gX--S3UrF7X3UZomsbgna8E2EmMISUr33e7_VvTkJckDcdRlzz8jUn3PmCuyKEExyGroqt-9mn56pEcIZvujQJSTVFnMosmIIwMGrBk__49JimNEJubR8aoSGQOOGcyZbJQ_KL9n3i2QKxvk2VVqH6YnnKMNiyiBhDbQz8aqVY1PEwhQgAsZOBsqmhZkd2HH_mVs2VBR67AnvYwvXCiFG-hEaneDMLNjXLE2FVOD48m8VuoQeF1o4fWs6-bcDAa1Kd757mApgauYSnRtyLnvHYXeIGdeQ9Tz7FES39eFs2NkVWJq2tSAY9QqgFKtWCIrKnQat4vr2m9cymc7mN2yRCl3McC_P6lGfWcKCJuBV99uk0MZVFinGFD-InjZ5AHRyYzK8P6tc8-60oG6Ib9TXErYQ6J9BSExVSUQGfD4rDRdq0tghF_DsGbPNUY1sPWJUJz-P3ciYNI1YENO2paQxmS8SCH9Bj9WkUL_RQSRX3l9FEJptYuYpNMEYI6P_WXf_iN1m1YvHXq3XwFTYssgOPCeb9hvZnyVROWcIhTN1fIn5E2j6y9BPYJPUk0KrJ0ou4nCXQwP4leQLFpzFRVGVZM5OZkLm0pUGpsIZWol7ZO79xlfLM8BKxsn2NIpLop-SXVPQgKy1d7luMwDJeFp1d68jXDsxqJnVThYFpsDkoj7LMiK4=w599-h560-no?authuser=2 alt="code highlighting properties and methods in JS">
+            <br>
+            <p>Link to tweet: <a href="https://twitter.com/gregogun/status/1277738566462976000?s=20" target=_blank>Day 15 tweet</a></p>
+            <br>
         </div>
 
         <div class="day">
