--- a/index.html
+++ b/index.html
@@ -199,12 +199,18 @@
         </div>
 
         <div class="day">
-            <h2>Day 16: Day Month 01, 2018</h2>
+            <h2>Day 16: 30th June, 2020</h2>
             <img src="#" alt="">
-            <p>**Today’s Progress**: Write progress here.</p>
-            <p>**Thoughts:** Write additional thoughts here.</p>
-            <p>**Link to tweet:** [yourName Day 1](insertLinkToTweet)</p>
-            <p>**Link to work:** [nameOfWork](insertLinkHere)</p>
+            <p>Today’s Progress:
+                <ul>
+                    <li>Read through 'What is JavaScript' on <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript" target="_blank">MDN Docs</a>. Learnt some useful stuff that other intro docs/tutorials didn't mention such as 'defer' and the difference between 'async' and 'defer'.</li>
+                    <li>Started watching <a href="https://www.youtube.com/playlist?list=PLkwxH9e_vrALlH7D0XLDn2td-uoHqHFxq" target="_blank">90 seconds JavaScript series</a> by codeSTACKr</li>
+                    <li>Wrote some code (half-awake and all by myself!) in the editor, before bed.</li>
+                </ul>.</p>
+            <p>Thoughts: I feel like I did okay today considering doing an 8 hour shift at work. I realised that it might be more effective to started coding not too long after I get home and leave other activities for the evening as the tiredness hits hard when coding late after a full days. I mean, can I really say I'm surprised? 🤦🏾‍♂️</p>
+            <img src="https://lh3.googleusercontent.com/w78rxNFVmdBGpWjbUyeiCbva_mJ7RCJlNhEJLUiPKqnpZngLNvBJtVP1TZtVM-RawDJEqyoqRejTD3A_V7h5QB8XaHNfO5rstV0w2Odt4HkucLDp0T-1Fa94sZs_74ZvZTjKq-j5PHoW5aCyGqNuqP2cKGn39TgcurspbFbnNHHMSAk26hAzvKtrS7TVIujR8zJCrm4CZ9BdifwvctFAhuVWF7tVlAVheHwcOVOxcyWk-lBF5v29NAGnpMzNXo9gu-lkVYrO_-njaYe9tBzQlndmeBBNQUO9shP9UL9vgU-ATZod3gG5VWR9aI6eyao-ywK6N2tzZ1Sr5d_EBx65PM1q9mMO8TuJaig18mfiRm1_kjij_Qhsb8ThTYHtmIQhuxANfNBOicVmDPxHQkUr5KWAEvVzV-UuNZz7ySG_uTPe6TAeKF8mZMmWcsgTJ0onogV7FauN3V_P2EIn_TzDhkEbRPjp-F003pDUTj4hjrC1KrnhYKJJy9hXShMjScrjAV6C8Xy-I0A_m1tyxrevRwGbJr4CaOGsq7Qog6AlNeLpvdVY_jwbIjsykAo0lj_whaHrORD7LOm0eESvdbDJBqaL7L3ug9RsTe6wBs2Od3JVWSpmwQVtNA2KO3pjwy67sUbui7F10tZquMpo--aMRIJI5XXPJFHl-_F0PbQmuWoNFSrXmO_u-EQE8UQ=w582-h365-no?authuser=2" alt="my day 16 progress">
+            <p>Link to tweet: <a href="https://twitter.com/gregogun/status/1278103107445100547" target="_blank">Day 16 tweet</a> </p>
+    
         </div>
 
         <div class="day">
