--- a/index.html
+++ b/index.html
@@ -214,12 +214,16 @@
         </div>
 
         <div class="day">
-            <h2>Day 17: Day Month 01, 2018</h2>
-            <img src="#" alt="">
-            <p>**Today’s Progress**: Write progress here.</p>
-            <p>**Thoughts:** Write additional thoughts here.</p>
-            <p>**Link to tweet:** [yourName Day 1](insertLinkToTweet)</p>
-            <p>**Link to work:** [nameOfWork](insertLinkHere)</p>
+            <h2>Day 17: 1st July, 2020</h2>
+            <p><b>Note: </b>It's a new month woo! This is beginning of my second month learning coding and what a rollercoaster it's been already. I will say though, I'm pretty proud of the progress I've made thus far, and I hope to keep consistent and learning (and hitting those goals!) throughout July!💪🏾</p>
+            <img src="https://media.giphy.com/media/3YJ5pOqaOrCIBSZo35/giphy.gif" alt="">
+            <p>Today’s Progress: 
+                <ul>
+                    <li>Pushed on with my codeacademy Web development course, refreshing my knowledge on <b>variables</b> today!</li>
+                    <li>Did a little bit of my current <a href="https://www.frontendmentor.io/challenges/social-media-dashboard-with-theme-switcher-6oY8ozp_H" target="_blank">Front-end Mentor challenge</a> - got stuck figuring out how to get a div to follow it's parent's behaviour. Going to look for the solution tomorrow either on Front-End Mentor site or slack group OR stack overflow.. suppose I need to ask my first question there at some point.</li>
+                </ul>.</p>
+            <p>Thoughts: Today went well in terms of keeping it simple. Decided to refresh my knowledge of variables and I did just that. Wanted to start drafting my first blog post but didn't manage to find time (I start at 4am at work tomorrow so it's an early night for me!) </p>
+            <p>Link to tweet: <a href="https://twitter.com/gregogun/status/1278444038660767745" target="_blank">Day 17 tweet</a></p>
         </div>
 
         <div class="day">
